# kwta-ensemble

./: .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
kwta_ensemble/: layers.py  utils.py
kwta_ensemble/models/: __init__.py  base.py  cnn.py  dnn.py  ensemble.py  kwta_ensemble.py  lenet.py  prefex_net.py  resnet.py  squeezenet.py
modules/: ensemble_classifier.py  ensemble_inspector.py  kwta_classifier.py  kwta_inspector.py  moe_classifier.py  moe_inspector.py  soconne_inspector.py
scripts/: inspect_kmnist  inspect_mnist  run_ensemble  run_kwta  run_moe
