[tool.poetry]
name = "kwta-ensemble"
version = "0.1.0"
description = "k-Winners-take-All Ensemble Neural Network"
authors = ["Abien Fred Agarap <abienfred.agarap@gmail.com>"]
license = "GPL-2.0 License"

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.8.1"
torchvision = "0.9.1"
numpy = "1.20.3"
seaborn = "0.11.1"
pt_datasets = "0.16.6"
pandas = "1.3.1"
matplotlib = "3.4.2"
imbalanced_learn = "0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
