[tool.poetry]
name = "kwta-ensemble"
version = "0.1.0"
description = "k-Winners-take-All Ensemble Neural Network"
authors = ["Abien Fred Agarap <abienfred.agarap@gmail.com>"]
license = "GNU AGPL v3.0 License"

[tool.poetry.dependencies]
python = "^3.11"
soconne-baseline = {git = "git@gitlab.com:afagarap/soconne-baseline.git", branch="master"}
pt-moe = {git = "git@gitlab.com:afagarap/mixture-of-experts.git", branch="master"}
torch = "^2.2.1"
torchvision = "^0.17.1"
numpy = "<2.0"
seaborn = "^0.11.1"
pt-datasets = "0.20.15"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
imbalanced_learn = "^0.11.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.1"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
